--- a/nginx/flask.conf
+++ b/nginx/flask.conf
@@ -1,7 +1,7 @@
 server {
 
-    listen 8080;    # This is the port to EXPOSE in nginx container
-    server_name pd-books;  # You can change this, but not necessary
+    listen 8080;
+    server_name pd-books;
     charset utf-8;
 
     location ^~ /static/ {
@@ -13,7 +13,7 @@ server {
     }
 
     location @flask {
-        proxy_pass http://app:5000;   # This is the port Flask container EXPOSE'd
+        proxy_pass http://app:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X_Forwared-For $proxy_add_x_forwarded_for;
